resources/OSSM3Ambient/HTTPRoutebookinfo.yaml
# resources/OSSM3/bookinfo-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookinfo-route
  namespace: bookinfo
spec:
  parentRefs:
  - name: bookinfo-ingress-gateway
    namespace: bookinfo
  hostnames:
  - "bookinfo-edge-bookinfo.apps.cluster-l75wh.l75wh.sandbox329.opentlc.com" # <--- Paste your retrieved cluster URL here
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /productpage
    - path:
        type: PathPrefix
        value: /static
    - path:
        type: PathPrefix
        value: /api/v1/products
    backendRefs:
    - name: productpage
      port: 9080
